# rgbd_mocap

./: .gitignore  C3DtoTRC.PY  C3DtoTRC.py  LICENSE  README.md  RMSE.py  RT8markers.py  biomech_pipeline.py  biomech_pipeline_old.py  biomech_pipeline_rgbd_mocap.py  blandt_altman_markers.py  blandt_altman_markers_by_axis.py  blandt_altman_tau.py  calibration.py  camera_conf.json  compare_dlc.py  compare_image.py  config_camera.json  config_camera_mod.json  convert_anato_to_trc.py  convert_to_new_config.py  copy_markers_pos_on_server.py  data_augmentation.py  environment.yml  extract_pedal_values.py  extract_scaling_factor.py  fig_markers_3d.py  init_with_kalman.py  kalman.py  label_arm.py  label_markers.py  label_markers_msk.py  label_markers_new_version.py  labeling_hand.py  labeling_shoulder.py  marker_comparison.py  marker_process_test.py  mean_participants.py  merge_data_file.py  msk_utils.py  (+35 more)
biomech_pipeline/: biomech_pipeline.py  biomech_utils.py  data_processing_helper.py  msk_utils.py
calibration_matrix/: write_calib_matrix.py
camera/: camera.py  camera_converter.py
crop/: crop.py  test_crop.py
filter/: filter.py  test_filter.py
frames/: crop_frames.py  frames.py  shared_frames.py
generate_results/: RMSE.py  RMSE_dlc.py  bland_altman.py  blandt_altman_dlc.py  blandt_altman_markers.py  blandt_altman_markers_by_axis.py  blandt_altman_tau.py  blandt_altman_tau_old.py  extract_scaling_factor.py  fig_markers_3d.py  mean_participants.py  model_variability.py  plot_curve.py  plot_curve_old.py  plot_curves.py  plot_curves_dlc.py  plot_markers.py  show_f-ext.py  (+10 more)
(+158 files in other folders)
