# create a toml file with the following content
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rgbd_mocap"
version = "0.0.1"
authors = [
  { name="Amedeo ceglia", email="amedeo.ceglia@umontreal.ca" },
]
description = "Motion capture based on RGB-D images, with or without markers."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy", "scipy", "matplotlib"]

[project.urls]
"Homepage" = "https://github.com/pyomeca/biosiglive"
"Bug Tracker" = "https://github.com/pyomeca/biosiglive/issues"
